# challenge_clean

./: .gitignore  README.md  pyproject.toml
scripts/: submit_mean.py  train_submit_flashy.py  train_submit_fusion.py  train_submit_image_regressor.py  train_submit_regressor.py
src/data/: dataset.py  enrich.py  stratify.py
src/models/: competition.py  fine_tune_fusion.py  flashy.py  fusion.py  image_regressor.py  regressor.py
src/utils/: loss.py  train.py
utils/: .rsyncignore  cross_validation.py  job.py  sync_and_run.sh
