[project]
name = "challenge-clean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "numpy<2",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "wandb>=0.20.0",
]
